servicestack redis changed with stackexchange redis(due to buffer overflow problem? in servicestack implementation), all promises now uses per promiseclient connection for pubsub making it more efficient, fast and less resource hungry

--- a/test/test.csproj
+++ b/test/test.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="ServiceStack.Redis" Version="5.10.2" />
+      <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     </ItemGroup>
 
 </Project>
