--- a/dotq/dotq.csproj
+++ b/dotq/dotq.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="ServiceStack.Redis" Version="5.10.2" />
+      <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     </ItemGroup>
 
 </Project>
